# cloud-anomaly-detection-

./: .gitignore  README.md  anomaly_classifier.py  pyproject.toml
models/: network_expert_best.pth  network_expert_last.pth  network_expert_metrics.json  system_expert_metrics.json
src/: __init__.py  main.py  pipeline.py
src/aggregator/: __init__.py  ensemble.py
src/api/: __init__.py  system_api.py
src/collectors/: __init__.py  cloudtrail_collector.py  system_collector.py  vpc_collector.py
src/experts/: __init__.py  base_expert.py  network_model.py  system_model.py
src/experts/network_expert/: __init__.py  constants.py  model.py  preprocessor.py  test.py  train.py
src/experts/system_expert/: __init__.py  model.py  parser.py  service.py  test.py  train.py
src/interpreter/: __init__.py  advisor.py  prompts.py
src/processing/: __init__.py  encoders.py  normalizers.py
src/training/: __init__.py  checkpointing.py  data.py  metrics.py  runner.py  train_network.py  train_system.py
tests/: test_anomaly_classifier.py  test_collectors.py  test_ensemble.py  test_network_expert.py  test_pipeline.py  test_processing.py  test_system_api.py  test_system_service.py  test_training_data.py  test_training_metrics.py
